--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,14 @@
 <html lang="ko">
 
 <head>
-  <title>
-    <%= htmlWebpackPlugin.options.title %>
-  </title>
+  <title>개발일기장</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="/favicon.ico">
   <link rel="stylesheet" href="/css/plugins/XEIcon/xeicon.min.css">
   <link rel="stylesheet" href="/css/plugins/prism/prism.css">
+  <link rel="stylesheet" href="/css/style.css">
   <script src="/js/plugins/prism/prism.js" defer></script>
 </head>
 
