--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="/favicon.ico">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+  <link rel="stylesheet" href="/css/plugins/xeicon/xeicon.min.css">
   <link rel="stylesheet" href="/css/plugins/prism/prism.css">
   <script src="/js/plugins/prism/prism.js" defer></script>
 </head>
